Fixed MAGETWO-8763: Measurement icon should be in left side for Price for Gift Wrapping

--- a/app/code/Mage/Catalog/view/adminhtml/product/product.css
+++ b/app/code/Mage/Catalog/view/adminhtml/product/product.css
@@ -475,14 +475,16 @@
 .field-price .control,
 .field-special_price .control,
 .field-msrp .control,
-.field-weight .control {
+.field-weight .control,
+.field-gift_wrapping_price .control {
     position: relative;
 }
 
 .field-price label.mage-error,
 .field-special_price label.mage-error,
 .field-msrp label.mage-error,
-.field-weight label.mage-error {
+.field-weight label.mage-erro,
+.field-gift_wrapping_price label.mage-error {
     position: absolute;
     left: 0;
     top: 30px;
